[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-learning-loop"
version = "0.1.0"
description = "Compile agent task trajectories into reusable skills and failure warnings."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenClaw Contributors" }
]
keywords = ["agents", "openclaw", "skills", "evaluation", "learning-loop"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.scripts]
openclaw-loop = "openclaw_learning_loop.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["openclaw_learning_loop*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
